apps/wynnaspects-web/nginx-test/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-httproute
  namespace: argocd
spec:
  parentRefs:
    - name: external-gateway
      namespace: nginx-gateway
  hostnames:
    - "argocda98bhky967.icedev.tn"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: coffee
          port: 80
